--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   workmanager: ^0.5.1
+  logger: ^1.1.0
+  flutter_local_notifications: ^12.0.4
 
 dev_dependencies:
   flutter_test:
